--- a/setup.cfg
+++ b/setup.cfg
@@ -52,8 +52,9 @@ testing =
 
 [options.entry_points]
 console_scripts =
-    predict_ehr = ehr_classification.classifier:run
-    tokenize = ehr_classification.tokenizer:run
+    predict_ehr = ehr_classification.classifier:predict_
+    train_ehr = ehr_classification.classifier:train_
+    tokenize = ehr_classification.tokenizer:main_
 
 [test]
 # py.test options when running `python setup.py test`
